--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <html>
     <head>
-        <h1></h1>
+        <title>个人网页</title>
     </head>
-    <body>
-<h1 style="background-color: gray;">Welcome everyone to my personal website.</h1>
-<h2 style="background-color: darkgray;">This is the first website in my life.Welcome everyone to visit. </h2>
-
-        <div class="hezi">
-        <h1 style="background-color: aqua;">    欢迎大家来到我的个人网站    </h1>
-        <h3>    这是我个人的专属网页    </h3>
-        <h4>Email:7777777@qq.com</h4>
-        <h4>mobile:88888888888</h4>
-        <h4>wei xin:zzh06531</h4>
-        <h3>我是一个阳光开朗 自律 自信 温柔 且热爱生活的男生</h3>
-        <h1>世界美好，我在中央！</h1>
-        <h3>    谢谢大家    </h3>
-        </div>
-
-    </body>
-<style>
-
-.hezi{
-background-color: aliceblue;
-width: 500px;
-padding: 60px;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%,-50%);
-}
-
+<body>
+    </div>
+    <div style="width: 900px;height: 950px;background-color:gray;margin: auto;">
+    <div style="width: 900px;margin:auto;background-color:bisque;">
+        <h1 style="padding-left: 255px;">Welcome to my Webpage.</h1>
+    </div>
+    <div>
+        <h3 style="padding-left: 60px;">大家好！我叫邹子豪，很高兴认识大家！</h3>
+        <h3 style="padding-left: 35px;">我今年18岁，来自江西鹰潭。性格外向 阳光开朗，比较温柔，也比较热心肠，爱交朋友，三观正常。会玩智能手机，未来可欺...</h3>
+        <h3 style="padding-left: 35px;">平时喜欢健身，爱早睡早起，饭量有亿点点大...偶尔喜欢玩玩游戏，刷刷小视频，比较喜欢不敷衍的朋友，句句有回应...</h3>
+        <h3 style="padding-left: 35px;">世界美好，我们在中央    愿春早秋晚岁岁平安。请大家和我一同做生活的勇士...</h3>
+        <h3 style="padding-left: 720px;">谢谢大家。</h3>
+    </div>
+    <div>
+        <h3></h3>
+        <h3></h3>
+        <h3></h3>
+    </div>
+</div>
+<div style="margin-top: -950px;">
+    <img src="https://s2.loli.net/2024/08/11/DMXBmZF8H5KdCSE.jpg"width="475px"height="950px">
+</div>
+<div style="margin-top: -950px;padding-left: 1410px;">
+    <img src="https://s2.loli.net/2024/08/12/Cmd9nJc2UT6HXQ8.png"width="475px"height="950px">
+</div>
+</body>
 
 
-</style>
 
 </html>
